--- a/note.html
+++ b/note.html
@@ -91,7 +91,7 @@ else {err.style.visibility = "hidden";
 return true; }
 }
 
-validateEmail(id){
+function validateEmail(id){
     result = false;
     var el = document.getElementById(id);
     var stringEl = String(el);
