--- a/note.html
+++ b/note.html
@@ -100,7 +100,7 @@ function validateEmail(id){
     console.log(charCount);
 
     for(i=1; i<charCount-1; ++i){
-        if (stringEl.charAt(i)="@" {
+        if (stringEl.charAt(i)="@") {
             result = true;
 
         } 
