--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 </head>
 <body id="mePage">
     <div id="content">
+
+        <div id="toNote">
+            <img src ="images/noteIcon-01.png">Leave a note</div>
         <div class="circular">
             <img src='me.jpg'></img>
         </div>
