--- a/interests.html
+++ b/interests.html
@@ -18,8 +18,11 @@
 </head>
 <body id="interestsPage">
     <div id="content">
+
+         <div id="toNote">
+            <img src ="images/noteIcon-01.png"></div>
              
-<h1 id ="h1Drawing">I have a background in fine arts and really like drawing and painting.</h1>
+<h1 id ="h1Drawing">I have a background in fine arts and really like drawing and.</h1>
 <button id = 'portfolioButton' onClick="showPortfolio();">Want to see my portfolio?</button>
 
 <div id="portfolioImage">
