--- a/map.html
+++ b/map.html
@@ -16,7 +16,8 @@ scale=1.0, target-densityDpi=device-dpi"/>
 
 </head> 
 <body id = "uzb" onLoad="displayMapByAddress()"> 
-
+ <div id="toNote">
+            <img src ="images/noteIcon-01.png"></div>
  <h1>
  	I was born in Tashkent, Uzbekistan. <br> Here's a Google Map view of my city.
  </h1>
