--- a/school.html
+++ b/school.html
@@ -16,6 +16,9 @@
 </head>
 <body id="schoolPage">
     <div id="content">
+
+         <div id="toNote">
+            <img src ="images/noteIcon-01.png"></div>
        
         
 <h1>I'm a Media Arts and Sciences major in Wellesley College. Below is an animation that I've made for one of my projects.</h1>
