--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div id="content">
 
         <div id="toNote">
-            <img src ="images/noteIcon-01.png">Leave a note</div>
+            <img src ="images/noteIcon-01.png"></div>
         <div class="circular">
             <img src='me.jpg'></img>
         </div>
