--- a/interests.html
+++ b/interests.html
@@ -10,10 +10,8 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <link href='http://fonts.googleapis.com/css?family=Dosis:300,500' rel='stylesheet' type='text/css'>
 
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="apple-mobile-web-app-status-bar-style"
-    content="black-translucent" />
+<meta name="viewport" content="width=device-width;
+    initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
 
 </head>
 <body id="interestsPage">
