--- a/map.html
+++ b/map.html
@@ -9,9 +9,8 @@ scale=1.0, target-densityDpi=device-dpi"/>
 <link href='http://fonts.googleapis.com/css?family=Dosis:300,500' rel='stylesheet' type='text/css'> 
 <link rel="stylesheet" type="text/css" href="style.css">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>Location</title>     
+<meta name="viewport" content="width=device-width;
+    initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
     
 
 </head> 
