--- a/interests.html
+++ b/interests.html
@@ -27,7 +27,7 @@
 <img id ="drawing" src="">
 
 <button type="button" id="backBut" onClick="location.href='interests.html';">Back</button>
-<button type="button" id="nextButDrawing" onClick="showNextImage(drawingUrls, 4);">Next</button>
+<button type="button" id="nextButDrawing" onClick="showNextImage(drawingUrls, 3);">Next</button>
 <button type="button" id="nextButPainting" onClick="showNextImage(paintingUrls, 4);">Next</button>
 <button type="button" id="nextButDoodles" onClick="showNextImage(doodleUrls, 6);">Next</button>
 
@@ -125,7 +125,7 @@ function addNewStyle(newStyle) {
     styleElement.appendChild(document.createTextNode(newStyle));
 }
 var imgCounter = 2;
-var drawingUrls = ["images/0.jpg","images/1.jpg","images/2.jpg", "images/3.jpg", "images/4.jpg"];
+var drawingUrls = ["images/0.jpg","images/1.jpg","images/2.jpg", "images/3.jpg"];
 var paintingUrls= ["images/10.jpg", "images/11.jpg", "images/12.jpg", "images/13.jpg", "images/14.jpg"];
 var doodleUrls = ["images/16.JPG", "images/17.JPG", "images/18.JPG", "images/19.JPG", "images/20.JPG", "images/21.JPG", "images/22.JPG"];
 
