--- a/index.html
+++ b/index.html
@@ -13,12 +13,13 @@
 
 <meta name="viewport" content="width=device-width;
     initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-    
+    <link rel="apple-touch-icon" href="images/logi.png">
+
 </head>
 <body id="mePage">
     <div id="content">
 
-        <div id="toNote">
+        <div id="toNote" onClick="location.href='note.html';">
             <img src ="images/noteIcon-01.png"></div>
         <div class="circular">
             
