--- a/interests.html
+++ b/interests.html
@@ -17,7 +17,7 @@
 <body id="interestsPage">
     <div id="content">
 
-         <div id="toNote">
+         <div id="toNote" onClick="location.href='note.html';">
             <img src ="images/noteIcon-01.png"></div>
              
 <h1 id ="h1Drawing">I have a background in fine arts. I have been drawing and painting since I was around 5. I don't get to spend much time in the studio anymore but I still doodle in class</h1>
@@ -26,7 +26,7 @@
 <div id="portfolioImage">
 <img id ="drawing" src="">
 
-<button type="button" id="backBut" onClick="location.href='interests.html';">Back</button>
+<button type="button" id="backBut" onClick="location.href='interests.html';">Go back</button>
 <button type="button" id="nextButDrawing" onClick="showNextImage(drawingUrls, 3);">Next</button>
 <button type="button" id="nextButPainting" onClick="showNextImage(paintingUrls, 4);">Next</button>
 <button type="button" id="nextButDoodles" onClick="showNextImage(doodleUrls, 6);">Next</button>
