--- a/map.html
+++ b/map.html
@@ -15,7 +15,7 @@ scale=1.0, target-densityDpi=device-dpi"/>
 
 </head> 
 <body id = "uzb" onLoad="displayMapByAddress()"> 
- <div id="toNote">
+ <div id="toNote" onClick="location.href='note.html';">
             <img src ="images/noteIcon-01.png"></div>
 
 
