--- a/school.html
+++ b/school.html
@@ -17,7 +17,7 @@
 <body id="schoolPage">
     <div id="content">
 
-         <div id="toNote">
+         <div id="toNote" onClick="location.href='note.html';">
             <img src ="images/noteIcon-01.png"></div>
        
         
