--- a/art/pageFive.html
+++ b/art/pageFive.html
@@ -1,15 +1,16 @@
 <html>
 <head>
-
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-
+<div>
 	<ul>
 	<li><a href="pageSix.html"> The landlord worked tirelessly in his study, which was behind a locked door at the top of a set of very treacherous stairs.</a></li>
 	<li><a href="pageSix.html">The worker tried to stay close to the candles when climbing up the stairway.</a></li>
 	<li><a href="pageSix.html">Candles placed on staircases may look like a stairway to heaven, but if one of them knocks over it will look like a stairway to... well, somewhere else! 
  </a></li>
-
+</div>
 </ul>
 
 
