--- a/art/pageFour.html
+++ b/art/pageFour.html
@@ -1,15 +1,18 @@
 <html>
 <head>
-
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<ul>
+		<div>
 
 	<li><a href="pageFive.html"> The landlord was deeply oppressive as is the way with such capitalist tyrants, and the worker had had enough. Other workers were beginning to organize against their tyrannical landlords and he believed the first blow against wage slavery should take place not far from Zaamin.</a></li>
 	<li><a href="pageFive.html">Of those young workers who live in someone else’s home, 18% have chosen to because of the nature or insecurity of their job, 2% have caring responsibilities and 8% say they are happy with the arrangement.</a></li>
 	<li><a href="pageFive.html">Police detain a young man who identified himself as a working student as he protests a new labor law that affects young workers.
 		
  </a></li>
+</div>
 </ul>
 </body>
 
