--- a/art/pageSix.html
+++ b/art/pageSix.html
@@ -1,22 +1,24 @@
 <html>
 <head>
-
+<link rel="stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<ul>
 
-	<li><p>They found the bodies of the three workers 44 days after they disappeared.</p></li>
-	<li><p>Massachusetts protects minors in the workforce with child labor laws, requiring them to obtain a work permit, and setting safety standards.</p></li>
-	<li><p>Then poof. David Copperfield.</p>
-</li>
+	<ul>
+		<div>
+	<li><a href="pageSeven.html"> They found the bodies of the three workers 44 days after they disappeared
+</a></li>
+	<li><a href="pageSeven.html">Massachusetts protects minors in the workforce with child labor laws, requiring them to obtain a work permit, and setting safety standards.</a></li>
+	<li><a href="pageSeven.html">Then poof. David Copperfield.
+ </a></li>
+</div>
+
 </ul>
 
- </a>
 
 
 </body>
 
 
 </html>
-
-
