--- a/mob220/index.html
+++ b/mob220/index.html
@@ -28,6 +28,8 @@
 
 <p>Page content goes here.</p>
 
+<a href = "http://cs.wellesley.edu/~hci/">bla</a>
+
 </div><!­­ /content ­­>
 
 <div data­role="footer">
