--- a/mob220/index.html
+++ b/mob220/index.html
@@ -28,7 +28,7 @@
 
 <p>Page content goes here.</p>
 
-<a href = "http://cs.wellesley.edu/~hci/">bla</a>
+<a href = "hvvvvv">bla</a>
 
 </div><!­­ /content ­­>
 
