--- a/mob220/index.html
+++ b/mob220/index.html
@@ -28,8 +28,7 @@
 
 <p>Page content goes here.</p>
 
-<a href = "hvvvvv">bla</a>
-
+<a href="http://cs.wellesley.edu/~hci/" data­transition="pop">I'll pop</a>
 </div><!­­ /content ­­>
 
 <div data­role="footer">
