--- a/mob220/index.html
+++ b/mob220/index.html
@@ -1,43 +1,69 @@
 <!DOCTYPE html> 
 
 <html> 
-
 <head> 
-
 <title>Page Title</title> 
-
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.css" />
-
 <script src="http://code.jquery.com/jquery­1.11.1.min.js"></script>
-
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.js"></script>
-
 </head> 
 
 <body> 
 
-<div data­role="page">
+
+<!­­ Start of first page ­­>
+
+<div data­role="page" id="foo">
 
 <div data­role="header">
 
-<h1>Page Title</h1>
+<h1>Foo</h1>
 
 </div><!­­ /header ­­>
 
 <div data­role="content">
 
-<p>Page content goes here.</p>
+<p>I'm first in the source order so I'm shown as the page.</p>
 
-<a href="http://cs.wellesley.edu/~hci/" data­transition="slideup">I'll pop</a>
+<p>View internal page called <a href="#bar">bar</a></p>
+
 </div><!­­ /content ­­>
 
 <div data­role="footer">
 
 <h4>Page Footer</h4>
 
-</div><!­­ /footer ­­>
+</div><!­­ /header ­­>
 
 </div><!­­ /page ­­>
+
+<!­­ Start of second page ­­>
+
+<div data­role="page" id="bar">
+
+<div data­role="header">
+
+<h1>Bar</h1>
+
+</div><!­­ /header ­­>
+
+<div data­role="content">
+
+<p>I'm first in the source order so I'm shown as the page.</p>
+
+<p><a href="#foo">Back to foo</a></p>
+
+</div><!­­ /content ­­>
+
+<div data­role="footer">
+
+<h4>Page Footer</h4>
+
+</div><!­­ /header ­­>
+
+</div><!­­ /page ­­>
+
+</body>
 
 </body>
 
