--- a/mob220/index.html
+++ b/mob220/index.html
@@ -1,69 +1,33 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 
 <html> 
+
 <head> 
+
 <title>Page Title</title> 
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.css" />
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.css"/>
 <script src="http://code.jquery.com/jquery­1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.js"></script>
-</head> 
 
+</head> 
 <body> 
 
-
-<!­­ Start of first page ­­>
-
-<div data­role="page" id="foo">
+<div data­role="page">
 
 <div data­role="header">
-
-<h1>Foo</h1>
-
+<h1>Page Title</h1>
 </div><!­­ /header ­­>
 
 <div data­role="content">
-
-<p>I'm first in the source order so I'm shown as the page.</p>
-
-<p>View internal page called <a href="#bar">bar</a></p>
-
+<p>Page content goes here.</p>
+<a href="http://cs.wellesley.edu/~hci/" data­transition="pop">I'll pop</a>
 </div><!­­ /content ­­>
 
 <div data­role="footer">
-
 <h4>Page Footer</h4>
-
-</div><!­­ /header ­­>
+</div><!­­ /footer ­­>
 
 </div><!­­ /page ­­>
-
-<!­­ Start of second page ­­>
-
-<div data­role="page" id="bar">
-
-<div data­role="header">
-
-<h1>Bar</h1>
-
-</div><!­­ /header ­­>
-
-<div data­role="content">
-
-<p>I'm first in the source order so I'm shown as the page.</p>
-
-<p><a href="#foo">Back to foo</a></p>
-
-</div><!­­ /content ­­>
-
-<div data­role="footer">
-
-<h4>Page Footer</h4>
-
-</div><!­­ /header ­­>
-
-</div><!­­ /page ­­>
-
-</body>
 
 </body>
 
