--- a/mob220/index.html
+++ b/mob220/index.html
@@ -20,7 +20,7 @@
 
 <div data­role="content">
 <p>Page content goes here.</p>
-<a href="http://cs.wellesley.edu/~hci/" data­transition="pop">I'll pop</a>
+<a href="http://cs.wellesley.edu/~hci/" data­transition="slide">I'll pop</a>
 </div><!­­ /content ­­>
 
 <div data­role="footer">
