--- a/mob220/index.html
+++ b/mob220/index.html
@@ -1,34 +1,33 @@
 <!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+</head>
+<body>
 
-<html> 
+<div data-role="page">
+  <div data-role="header">
+    <h1>Welcome To My Homepage</h1>
+  </div>
 
-<head> 
+  <div data-role="main" class="ui-content">
+    <p>I Am Now A Mobile Developer!!</p>
+<a href ="#bla">click</a>
+  </div>
 
-<title>Page Title</title> 
-<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.css"/>
-<script src="http://code.jquery.com/jquery­1.11.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile­1.4.5.min.js"></script>
+  <div data-role="footer">
+    <h1>Footer Text</h1>
+  </div>
+</div> 
 
-</head> 
-<body> 
 
-<div data­role="page">
-
-<div data­role="header">
-<h1>Page Title</h1>
-</div><!­­ /header ­­>
-
-<div data­role="content">
-<p>Page content goes here.</p>
-<a href="http://cs.wellesley.edu/~hci/" data­transition="slide">I'll pop</a>
-</div><!­­ /content ­­>
-
-<div data­role="footer">
-<h4>Page Footer</h4>
-</div><!­­ /footer ­­>
-
-</div><!­­ /page ­­>
+<div  id = "bla" data-role="page">
+  <div data-role="header">
+    <h1>Welcome To Myyy Homepage</h1>
+  </div>
 
 </body>
-
 </html>
