--- a/mob220/index.html
+++ b/mob220/index.html
@@ -15,7 +15,8 @@
 
   <div data-role="main" class="ui-content">
     <p>I Am Now A Mobile Developer!!</p>
-<a href ="#bla">click</a>
+<a href ="#bla" data-transition="slideup">click</a>
+
   </div>
 
   <div data-role="footer">
