--- a/mob220/solution.html
+++ b/mob220/solution.html
@@ -28,12 +28,14 @@
 
                 <p><a href="DialogPage.html" data-role="button" data-rel="dialog" data-transition="flip">Open dialog</a></p>
 
-                <p><a href="#popupPhoto" data-role="button" data-rel="popup">Open Popup</a>
+                <p><a href="#popupPhoto" data-role="button" data-rel="popupBasic">Open Popup</a>
 				
                 <div data-role="popup" id="popupBasic">
 					<img src="student_bike.jpg"/>
 				</div>
                 
+
+
                 <div data-role="popup" id="popupPhoto" data-overlay-theme="a" data-theme="d" data-corners="false">
 					<a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
 					<img class="popphoto" src="Wellesley_bikes.png" alt="Students riding">
