--- a/mob220/solution.html
+++ b/mob220/solution.html
@@ -31,7 +31,7 @@
                 <p><a href="#popupPhoto" data-role="button" data-rel="popupBasic">Open Popup</a>
 				
                 <div data-role="popup" id="popupBasic">
-					<img src="student_bike.jpg"/>
+					<img src="student_bike.png"/>
 				</div>
                 
 
