--- a/mob220/solution.html
+++ b/mob220/solution.html
@@ -28,7 +28,7 @@
 
                 <p><a href="DialogPage.html" data-role="button" data-rel="dialog" data-transition="flip">Open dialog</a></p>
 
-                <p><a href="#popupBasic" data-role="button" data-rel="popup">Open Popup</a>
+                <p><a href="#popupInfo" data-role="button" data-rel="popup">Open Popup</a>
 				
                 <div data-role="popup" id="popupBasic">
 					<img src="student_bike.png"/>
