--- a/mob220/hw3/solution.html
+++ b/mob220/hw3/solution.html
@@ -47,7 +47,7 @@
 
 
 
-                <div data-role="page" id="campusPlaces" data-theme="a">
+                <div data-role="page" id="campusPlaces"  data-theme="a">
 
                     <div role="main" class="ui-content">
                         <ul data-role="listview" data-theme="a">
@@ -143,7 +143,7 @@
             </div><!-- /page -->
 
 
-<div data-role="page" id="pendleton" data-theme="a" >
+<div data-role="page" class = "scrollable" id="pendleton" data-theme="a" >
 
                     <div role="main" class="ui-content">
 
