--- a/mob220/hw3/solution.html
+++ b/mob220/hw3/solution.html
@@ -12,11 +12,15 @@
         <link rel="stylesheet" type="text/css" href="myStyle.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
+        <script src="jquery.sticky-kit.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
 
 
     </head>
+
+<script>$("#footer").stick_in_parent()
+</script>
 
     <body>
         <!-- Start of first page -->
