--- a/mob220/hw3/solution.html
+++ b/mob220/hw3/solution.html
@@ -40,9 +40,9 @@ $("#footer").stick_in_parent();
            <div data-role="footer" id ="footer">
             <div data-role="navbar">
                 <ul>
-                    <li> <a href="#home" data-icon="home">Home</a>
-                        <li> <a href="#campusPlaces" id = "campus" data-icon="places">Campus places</a>
-                            <li> <a href="#wMap" data-icon="map">Map</a>
+                    <li id="homeBtn"> <a href="#home" data-icon="home">Home</a> </li>
+                        <li> <a href="#campusPlaces" id = "campus" data-icon="location">Campus places</a>
+                            <li> <a href="#wMap" data-icon="grid">Map</a> </li>
                             </ul>
                         </div> <!-- End of nav bar -->
 
