--- a/art/pageNine.html
+++ b/art/pageNine.html
@@ -9,7 +9,7 @@
 		
 	<li><a href="pageTen.html"> The most common symptoms of brain tumors include headaches; numbness or tingling in the arms or legs; seizures, memory problems; mood and personality changes; balance and walking problems; nausea and vomiting; changes in speech, vision, or hearing.
 </a></li>
-	<li><a href="pageTen.html">If I keep smoking, I'm gonna have a lung cancer he thought, but than he burst into laughing, I have golf ball sized brain tumor, I don’t give a shit about lung cancer he thought and died.</a></li>
+	<li><a href="pageTen.html">If I keep smoking, I'm gonna have a lung cancer he thought, but than he burst into laughing, I have golf ball sized brain tumor, I don&#39t give a shit about lung cancer he thought and died.</a></li>
 	<li><a href="pageTen.html">Search instead for brina tumpr
 
  </a></li>
