--- a/art/page14.html
+++ b/art/page14.html
@@ -11,7 +11,7 @@
 </a></li>
 	<li><a href="page15.html"> Founded in 2004 by Alex Papadimoulis, The Daily WTF is your how-not-to guide for developing software.
 	</a></li>
-	<li><a href="page15.html">Home · Buy Online · About · Reviews · Orders to Go! Orders to Be Delivered! Location & Hours · Order Desserts Online 
+	<li><a href="page15.html">Home - Buy Online - About - Reviews - Orders to Go! Orders to Be Delivered! Location & Hours - Order Desserts Online 
  </a></li>
 </div>
 
