--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -23,9 +23,9 @@
 
              <div id="header">
                 <h1>StudySpot</h1>
-              <div id = "heartDiv"
-                    <img id ="heartIcon"src = "heartIconD.png">
-</div>
+              <div id="heartDiv">
+                <img id = "heartIcon" src = "heartIconD.png">
+              </div>
 
             </div>
 
