--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -22,7 +22,7 @@
         <div data-role="page" id="home" data-theme="a">
 
              <div id="header">
-                <h1>StudySpot</h1>
+                <h1 class = "title">StudySpot</h1>
               <div id="heartDiv">
                 <img id = "heartIcon" src = "heartIconD.png">
               </div>
@@ -30,10 +30,52 @@
             </div>
 
 
-            <div role="content" class="ui-content">  <!-- Start of content -->
+            <div id = "homePage" role="content" class="ui-content">  <!-- Start of content -->
 
+            <h2 class = "title">What kind of a space do you prefer?</h2>
+
+            <div id ="placePrefer">
+               <p>blabla</p>
+                <div>
+                  <img src ="studyspace.png">
+                  <h3 class = "title">
+                    Study area
+                  </h3>
+                </div>
+                <div>
+                    <img src ="lounge.png">
+                    <h3 class = "title">
+                    Lounge
+                  </h3>
+                </div>
+                <div>
+                    <img src ="cafe.png">
+                        <h3 class = "title">
+                    Cafe
+                  </h3>
+                </div>
+                 <div>
+                    <img src ="computer.png">
+                        <h3 class = "title">
+                    Computer <br>lab
+                  </h3>
+                </div>
                 
 
+                <div>
+                    <img src ="classroom.png">
+                        <h3 class = "title">
+                    Classroom
+                  </h3>
+                </div>
+                <div>
+                    <img src ="nature.png">
+                        <h3 class = "title">
+                    Outdoors
+                  </h3>
+                </div>
+
+            </div>
 
            </div> <!-- End of content -->
            
