--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -14,6 +14,15 @@
         <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
 
+          <script type="text/javascript">
+    $( document ).ready( function(){
+        $('.option').on('click',function () {
+             $('.option').removeClass('selected');
+             $(this).addClass('selected')
+        });
+    });
+    </script>
+
     </head>
 
 
@@ -35,27 +44,26 @@
             <h2 class = "title">What kind of a space do you prefer?</h2>
 
             <div id ="placePrefer">
-               <p>blabla</p>
-                <div>
+                <div class = "option">
                      <img src ="studyspace.png">
                   <h3 class = "title">
                     Study area
                   </h3>
 
                 </div>
-                <div>
+                <div class="option">
                     <img src ="lounge.png">
                     <h3 class = "title">
                     Lounge
                   </h3>
                 </div>
-                <div>
+                <div class="option">
                     <img src ="cafe.png">
                         <h3 class = "title">
                     Cafe
                   </h3>
                 </div>
-                 <div>
+                 <div class="option">
                     <img src ="computer.png">
                         <h3 class = "title">
                     Computer <br>lab
@@ -63,13 +71,13 @@
                 </div>
                 
 
-                <div>
+                <div class="option">
                     <img src ="classroom.png">
                         <h3 class = "title">
                     Classroom
                   </h3>
                 </div>
-                <div>
+                <div class="option">
                     <img src ="nature.png">
                         <h3 class = "title">
                     Outdoors
