--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -93,6 +93,45 @@
 
 
 
+
+
+
+
+
+ <div data-role="page" id="resultsPage" data-theme="a">
+
+             <div id="header">
+                <h1 class = "title">StudySpot</h1>
+              <div id="heartDiv">
+                <img id = "heartIcon" src = "heartIconD.png">
+              </div>
+
+              <div id="backArrowDiv">
+                <img id = "arrowIcon" src = "arrowBack.png">
+              </div>
+
+            </div>
+
+
+            <div id = "results" role="content" class="ui-content">  <!-- Start of content -->
+
+
+           </div> <!-- End of content -->
+           
+
+                </div> <!-- End of first page -->
+
+
+
+
+
+
+
+
+
+
+
+
                 <div data-role="page" id="campusPlaces"  data-theme="a">
 
                     <div role="main" class="ui-content">
