--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -112,8 +112,87 @@
 
             </div>
 
+            <div id ="filters">
+                <h2>Filters
+                </h2>
+            </div>
+
 
             <div id = "results" role="content" class="ui-content">  <!-- Start of content -->
+                <div class = container>
+                    <div class = "resultsImage">
+                    <img class = "placePhoto"src = "placeholder.jpg">
+                </div>
+
+                <div class = "resultsText">
+                    <h2>Place name<h2>
+                        <ul>
+                            <li><h1>bla</h1></li>
+                            <li><h1>bla</h1></li>
+                            <li><h1>bla</h1></li>
+
+                        </ul>
+                    </div>
+
+                    <div class = "arrowRight">
+                        <img class = "arrowRightImg" src="arrowRightIcon.png">
+
+                    </div>
+
+
+
+
+                </div>
+
+                 <div class = container>
+                    <div class = "resultsImage">
+                    <img class = "placePhoto"src = "placeholder.jpg">
+                </div>
+
+                <div class = "resultsText">
+                    <h2>Place name<h2>
+                        <ul>
+                            <li><h1>bla</h1></li>
+                            <li><h1>bla</h1></li>
+                            <li><h1>bla</h1></li>
+
+                        </ul>
+                    </div>
+
+                    <div class = "arrowRight">
+                        <img class = "arrowRightImg" src="arrowRightIcon.png">
+
+                    </div>
+
+
+
+
+                </div>
+
+                 <div class = "container">
+                    <div class = "resultsImage">
+                    <img class = "placePhoto"src = "placeholder.jpg">
+                </div>
+
+                <div class = "resultsText">
+                    <h2>Place name<h2>
+                        <ul>
+                            <li><h1>bla</h1></li>
+                            <li><h1>bla</h1></li>
+                            <li><h1>bla</h1></li>
+
+                        </ul>
+                    </div>
+
+                    <div class = "arrowRight">
+                        <img class = "arrowRightImg" src="arrowRightIcon.png">
+
+                    </div>
+
+
+
+
+                </div>
 
 
            </div> <!-- End of content -->
