--- a/studySpot/index.html
+++ b/studySpot/index.html
@@ -44,7 +44,7 @@
 
             <div id = "homePage" role="content" class="ui-content">  <!-- Start of content -->
 
-            <h2 class = "title">What kind of a space do you prefer?</h2>
+            <h2 class = "title" id="placePref"> What kind of a space do you prefer?</h2>
 
             <div id ="placePrefer">
                 <div class = "option">
@@ -90,9 +90,11 @@
             </div>
 
             <div id= "noisePrefer">
-<h2 class = "title">What's your noise preference?</h2>
+              
 
                  <div class="noiseOption">
+
+                    <h2 class = "title">What's your noise preference?</h2>
                     <img src ="silentIcon.png">
                         <h3 class = "title">
                    Silent
