--- a/studySpot/filters.html
+++ b/studySpot/filters.html
@@ -146,7 +146,7 @@
                 <div class="optionLighting">
                     <img class="uiIcon" src ="icons/fluor.png">
                     <h3 class = "title">
-                    Fluorescent
+                    Electric
                   </h3>
                 </div>
                 <div class="optionLighting">
