--- a/studySpot/filters.html
+++ b/studySpot/filters.html
@@ -21,87 +21,72 @@
              $('.option').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
 
-     $( document ).ready( function(){
         $('.noiseOption').on('click',function () {
              $('.noiseOption').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
 
-      $( document ).ready( function(){
         $('.optionLighting').on('click',function () {
              $('.optionLighting').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
-   
 
-      $( document ).ready( function(){
         $('.optionGroup').on('click',function () {
              $('.optionGroup').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
-   
-
-    $( document ).ready( function(){
+ 
         $('.optionProximity').on('click',function () {
              $('.optionProximity').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
 
-     $( document ).ready( function(){
         $('.optionEat').on('click',function () {
              $('.optionEat').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
 
-      $( document ).ready( function(){
         $('.optionResource1').on('click',function () {
              $('.optionResource1').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
- $( document ).ready( function(){
+
         $('.optionResource2').on('click',function () {
              $('.optionResource2').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
- $( document ).ready( function(){
+
         $('.optionResource3').on('click',function () {
              $('.optionResource3').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
- $( document ).ready( function(){
+
         $('.optionResource4').on('click',function () {
              $('.optionResource4').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
- $( document ).ready( function(){
+
         $('.optionResource5').on('click',function () {
              $('.optionResource5').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
- $( document ).ready( function(){
+
         $('.optionResource6').on('click',function () {
              $('.optionResource6').removeClass('selected');
              $(this).addClass('selected')
         });
-    });
- $( document ).ready( function(){
-        $('.optionResource7').on('click',function () {
-             $('.optionResource7').removeClass('selected');
+
+          $('.optionResource7').on('click',function () {
+             $('.optionResource6').removeClass('selected');
              $(this).addClass('selected')
         });
+
+
     });
+
+
+ 
 
 
 
@@ -294,7 +279,7 @@
                 </div>
 
 <div class="optionResource7">
-                    <img class="uiIcon"  src ="icons/software.png">
+                           <img class="uiIcon"  src ="icons/software.png">
                         <h3 class = "title">
                     Software
                   </h3>
@@ -312,7 +297,17 @@
 
 
 
-
+<div data-role="popup" id="popupList" data-overlay-theme="a" data-theme="a" data-corners="false">
+                    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
+                    <ul>
+                        <li>Adobe Photoshop</li>
+                         <li>Adobe Illustrator</li>
+                          <li>Adobe inDesign</li>
+                           <li>Adobe AfterEffects</li>
+                            <li>Final Cut</li>
+                             <li>Maya</li>
+                    </ul>
+                </div>
 
 
 
