--- a/studySpot/filters.html
+++ b/studySpot/filters.html
@@ -278,12 +278,13 @@
                   </h3>
                 </div>
 
-<div class="optionResource7">
+<a href="#popupMenu" data-rel="popup" data-transition="slideup" ><div class="optionResource7">
                            <img class="uiIcon"  src ="icons/software.png">
                         <h3 class = "title">
                     Software
                   </h3>
                 </div>
+            </a>
 
 
 
@@ -297,17 +298,17 @@
 
 
 
-<div data-role="popup" id="popupList" data-overlay-theme="a" data-theme="a" data-corners="false">
-                    <a href="#" data-rel="back" data-role="button" data-theme="a" data-icon="delete" data-iconpos="notext" class="ui-btn-right">Close</a>
-                    <ul>
-                        <li>Adobe Photoshop</li>
-                         <li>Adobe Illustrator</li>
-                          <li>Adobe inDesign</li>
-                           <li>Adobe AfterEffects</li>
-                            <li>Final Cut</li>
-                             <li>Maya</li>
-                    </ul>
-                </div>
+<div data-role ="popup" id="popupMenu" data-theme="a">
+<ul data role="listview" data-inset="true" style="min-width:210px;">
+<li><div class="soft1">Adobe Photoshop</div></li>
+                         <li><div class="soft2">Adobe Illustrator</div></li>
+                          <li><div class="soft3">Adobe inDesign</div></li>
+                           <li><div class="soft4">Adobe AfterEffects</div></li>
+                            <li><div class="soft5">Final Cut</div></li>
+                             <li><div class="soft6">Maya</div></li>
+</ul>
+</div>
+
 
 
 
