--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -261,11 +261,12 @@
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Place name<h2>
+                    <h2>Lulu<h2>
+                      <h3>Anderson Forum, 2nd floor</h3>
                         <ul>
-                            <li><h1>bla</h1></li>
-                            <li><h1>bla</h1></li>
-                            <li><h1>bla</h1></li>
+                            <li><h1>Dim lighting</h1></li>
+                            <li><h1>Couches</h1></li>
+                            <li><h1>Tables</h1></li>
 
                         </ul>
                     </div>
@@ -283,11 +284,12 @@
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Place name<h2>
+                    <h2>Science center<h2>
+                      <h3>Leaky beaker, 1st floor</h3>
                         <ul>
-                            <li><h1>bla</h1></li>
-                            <li><h1>bla</h1></li>
-                            <li><h1>bla</h1></li>
+                            <li><h1>Electric light</h1></li>
+                            <li><h1>Tables</h1></li>
+                            <li><h1>Whiteboard</h1></li>
 
                         </ul>
                     </div>
@@ -308,11 +310,12 @@
                 </div>
 
                 <div class = "resultsText">
-                    <h2>Place name<h2>
+                    <h2>Clapp<h2>
+                      <h3>Room #123, 1st floor</h3>
                         <ul>
-                            <li><h1>bla</h1></li>
-                            <li><h1>bla</h1></li>
-                            <li><h1>bla</h1></li>
+                            <li><h1>Electric light</h1></li>
+                            <li><h1>Printer</h1></li>
+                            <li><h1>Table</h1></li>
 
                         </ul>
                     </div>
