--- a/studySpot/results.html
+++ b/studySpot/results.html
@@ -26,7 +26,7 @@ PURPOSE: For CS220, P4
 
 <body>
 	<!-- Start of navigation 1 page -->
-	<div data-role="page" id="anderson" data-theme="a">
+	<div data-role="page" id="andersonRPage" data-theme="a">
 
 		<!-- STUDYSPOT HEADER -->
 		<div id="header">
@@ -43,7 +43,9 @@ PURPOSE: For CS220, P4
 	
 		
 		<div role="main" class="ui-content">
-			<img src="anderson.jpg" style="width:100%;height:240px;">
+			<div id="imgContainer">
+			<img src="anderson2.jpg" style="width:100%;height:240px;">
+		</div>
             <h2 class="title"> Anderson Forum</h2>
             <h4 class="title"> Lulu Chow Wang Campus Center</h4>
 			<h3 class="title"> Amenities </h3>
