--- a/studySpot/results.html
+++ b/studySpot/results.html
@@ -9,7 +9,7 @@ PURPOSE: For CS220, P4
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>jQuery Mobile: Theme Download</title>
+	<title>Anderson Forum</title>
 	<link rel="stylesheet" href="themes/wells.min.css" />
 	<link rel="stylesheet" href="themes/jquery.mobile.icons.min.css" />
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile.structure-1.4.5.min.css" />
@@ -25,6 +25,85 @@ PURPOSE: For CS220, P4
 
 
 <body>
+
+   <script type="text/javascript">
+    $( document ).ready( function(){
+
+$("#addFav").click(function(){
+    alert("Tha spot was added to your favorites");
+});
+});
+</script>
+
+	        <div data-role="page" id="home" data-theme="a">
+
+             <div id="header">
+                <h1 id ="appTitle"class = "title">StudySpot</h1>
+              <div id="heartDiv">
+                <img id = "heartIcon" src = "heartIconD.png">
+              </div>
+
+               <div id="backArrowDiv">
+                <img id = "arrowIcon" src = "arrowBack.png">
+              </div>
+
+            </div>
+
+
+            <div id = "resPage" role="content" class="ui-content">  <!-- Start of content -->
+            	<div id="imgContainer">
+            	<img src="lulu.jpg" >
+            </div>
+
+          
+<div id="titleCont">
+            <h2 class="title"> Anderson Forum</h2>
+            <h1 class="title"> Lulu Chow Wang Campus Center</h4>
+        </div>
+
+<div id="addFav">
+	<img id="heartIcon" src="heartIconD.png">
+</img>
+<h3 class="title">Add to favorites</h3>
+</div>
+<div id="amen">
+
+			<h2 class="title"> Amenities </h2>
+			<div id="col1">
+					<ul class="title">
+						<li> <h3 class="title">Dim lighting</h3></li>
+						<li> <h3 class="title">Comfortable couches</h3></li>
+						<li> <h3 class="title">Large lounge chairs</h3> </li>
+						
+					</ul>
+					</div>
+					<div id="col2">
+						<ul class="title">
+						<li> <h3 class="title">Small tables </h3></li>
+						<li> <h3 class="title">Close to cafeteria</h3></li>
+						<li> <h3 class="title">Close to Emporium cafe</h3></li>
+					</ul>
+				</div>
+
+				</div>
+
+
+           </div> <!-- End of content -->
+           <div id="navigateB">
+					<img id="thumbs" src="thumbsUp-01.png">
+					<h2 class="title">Navigate</h2>
+				</div>
+
+                </div> <!-- End of first page -->
+
+
+
+
+
+
+
+
+
 	<!-- Start of navigation 1 page -->
 	<div data-role="page" id="andersonRPage" data-theme="a">
 
@@ -42,12 +121,14 @@ PURPOSE: For CS220, P4
         <!-- STUDYSPOT HEADER -->
 	
 		
-		<div role="main" class="ui-content">
+		<div id ="mainDiv" role="main" class="ui-content">
 			<div id="imgContainer">
-			<img src="anderson2.jpg" style="width:100%;height:240px;">
+			<img src="lulu.jpg" style="width:100%;height:240px;">
 		</div>
+		<div id="titleCont">
             <h2 class="title"> Anderson Forum</h2>
             <h4 class="title"> Lulu Chow Wang Campus Center</h4>
+        </div>
 			<h3 class="title"> Amenities </h3>
 					<ul class="title">
 						<li> Dim lighting</li>
