--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -131,11 +131,18 @@
 
                 <div id="results" style="display:none;">
                     <div id="navigateTo">
-                        <h4 class="title">Anderson Forum</h4>
-                        <h3 class="title">Lulu Chow Wang Campus Center</h3>
-                        <div id="heartNav">
-                            <img id = "heartIcon" src = "heartIconD.png">
-                        </div>
+
+
+                        <div id="titleCont2">
+            <h2 class="title"> Anderson Forum</h2>
+            <h1 class="title"> Lulu Chow Wang Campus Center</h4>
+        </div>
+
+<div id="addFav2">
+    <img id="heartIcon" src="heartIconD.png">
+</img>
+<h3 class="title">Add to favorites</h3>
+</div>
                     </div>
                     <div id="directions"></div>
                 </div> <!--results-->
