--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -133,12 +133,12 @@
                     <div id="navigateTo">
 
 
-                        <div id="titleCont">
+                        <div id="titleCont2">
             <h2 class="title"> Anderson Forum</h2>
             <h1 class="title"> Lulu Chow Wang Campus Center</h4>
         </div>
 
-<div id="addFav">
+<div id="addFav2">
     <img id="heartIcon" src="heartIconD.png">
 </img>
 <h3 class="title">Add to favorites</h3>
