--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -14,6 +14,7 @@
 
         <!--ADDED-->
         <link rel="stylesheet" type="text/css" href="mapStyle.css" />
+        <link rel="stylesheet" type="text/css" href="myStyle.css" />
         <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
         <script src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700,100' rel='stylesheet' type='text/css'>
@@ -130,11 +131,16 @@
                 <!--</div>-->  
 
                 <div id="results" style="display:none;">
-                    <div id="navigateTo">
+                   <div id="titleCont">
             <h2 class="title"> Anderson Forum</h2>
             <h1 class="title"> Lulu Chow Wang Campus Center</h4>
-                        
-                    </div>
+        </div>
+
+<div id="addFav">
+    <img id="heartIcon" src="heartIconD.png">
+</img>
+<h3 class="title">Add to favorites</h3>
+</div>
                     <div id="directions"></div>
                 </div> <!--results-->
             </div> <!--content-->
