--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -139,10 +139,10 @@
 </img>
 <h3 class="title">Add to favorites</h3>
 </div>
-                <div id="results" style="display:none;">
+                <div id="mapResults">
                    
                     <div id="directions"></div>
-                   
+
                 </div> <!--results-->
             </div> <!--content-->
         </div> <!--page--> 
