--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -129,7 +129,7 @@
                 <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
                     <div id="map_canvas"></div>
                 <!--</div>-->  
-      <div id="mapResults">
+       <div id="mapResults" style="display:none;">
                    
                     <div id="directions"></div>
 
