--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -129,10 +129,12 @@
                 <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
                     <div id="map_canvas"></div>
                 <!--</div>-->  
-       <div id="mapResults" style="display:none;">
+<div id="pathDir">
+                <div id="mapResults">
                    
                     <div id="directions"></div>
 
                 </div> <!--results-->
+            </div>
             </div> <!--content-->
         </div> <!--page--> 
