--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -129,11 +129,19 @@
                 <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
                     <div id="map_canvas"></div>
                 <!--</div>-->   <div id="titleCont2">
+                
             <h2 class="title"> Anderson Forum</h2>
             <h3 class="title"> Lulu Chow Wang Campus Center</h3>
         </div>
 
-                  
+<div id="addFav2">
+    <img id="heartIcon" src="heartIconD.png">
+</img>
+<h3 class="title">Add to favorites</h3>
+</div>
+
+<div id="pathDir">
+                <div id="mapResults">                  
                     <div id="directions"></div>
 
                 </div> <!--results-->
