--- a/studySpot/map.html
+++ b/studySpot/map.html
@@ -101,6 +101,15 @@
             });
 
         </script>
+
+          <script type="text/javascript">
+    $( document ).ready( function(){
+
+$("#addFav2").click(function(){
+    alert("Tha spot was added to your favorites");
+});
+});
+</script>
     </head>
 
     <body>
@@ -129,7 +138,7 @@
                 <!--<div class="ui-bar-c ui-corner-all ui-shadow" style="padding:1em;"> -->
                     <div id="map_canvas"></div>
                 <!--</div>-->   <div id="titleCont2">
-                
+
             <h2 class="title"> Anderson Forum</h2>
             <h3 class="title"> Lulu Chow Wang Campus Center</h3>
         </div>
