--- a/studySpot/index2.html
+++ b/studySpot/index2.html
@@ -256,9 +256,9 @@
             <div id = "results" role="content" class="ui-content">  <!-- Start of content -->
                 
                 <div class = container>
-                    <div class = "resultsImage">
+                    <a href="results.html" data-rel="page" data-transition="slide" ><div class = "resultsImage">
                     <img class = "placePhoto"src = "anderson.jpg">
-                </div>
+                </div></a>
 
                 <div class = "resultsText">
                     <h2>Lulu<h2>
