--- a/studySpot/results.html
+++ b/studySpot/results.html
@@ -105,49 +105,5 @@ $("#addFav").click(function(){
 
 
 		
-		<div role="main" class="ui-content">
-			<img src="towerhall.jpg" style="width:100%;height:240px;">
-            <h2 class="title"> Tower Great Hall</h2>
-            <h4 class="title"> Tower Dorm </h4>
-			<h3 class="title"> Amenities </h3>
-					<ul class="title">
-						<li> Dim lighting</li>
-						<li> Comfortable couches</li>
-						<li> Large chairs </li>
-						<li> Large tables </li>
-						<li> Close to cafeteria</li>
-					</ul>
-
-		</div><!-- /content -->
-		
-		<!-- Start of navigation 3 page -->
-	<div data-role="page" id="readingroom" data-theme="a">
-		
-		<!-- STUDYSPOT HEADER -->
-		<div id="header">
-                <h1 class = "title">StudySpot</h1>
-              <div id="heartDiv">
-                <img id = "heartIcon" src = "heartIconD.png">
-              </div>
-
-              <div id="backArrowDiv">
-                <img id = "arrowIcon" src = "arrowBack.png">
-              </div>
-        </div>
-        <!-- STUDYSPOT HEADER -->
-		
-		<div role="main" class="ui-content">
-			<img src="clapp.jpg" style="width:100%;height:240px;">
-            <h2 class="title"> Reading Room </h2>
-            <h4 class="title"> Clapp Library</h4>
-			<h3 class="title"> Amenities </h3>
-					<ul class="title">
-						<li> Fluorescent lighting</li>
-						<li> Comfortable lounge chairs</li>
-						<li> Normal chairs </li>
-						<li> Big tables </li>
-					</ul>
-
-		</div><!-- /content -->
- 	</div>
-</div><!-- /page -->
+		</body>
+		</html>
